--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --primary-accent: #0a2540;
   --bg-white: #fff;
   --bg-light: #f7f9fc;
+  --primary-button-hover: #6d7a88;
 
   /* Fonts */
   --body-font: "Roboto", sans-serif;
@@ -21,10 +22,17 @@
   --h4-size: 32px;
   --h5-size: 28px;
   --h6-size: 22px;
+  --subtitle-size: 17px;
+  --p-size: 18px;
+  --p-height: 26px;
+  --secondary-text-size: 14px;
+  --secondary-text-height: 18px;
+  --button-text-size: 16px;
 
   /* Line heights */
   --h1-height: 108px;
   --h2-height: 75px;
+  --subtitle-height: 26px;
 
   /* Spacings */
   --spacing-sm: 8px;
@@ -40,6 +48,13 @@ body {
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
+}
+
+p {
+  font-size: var(--p-size);
+  line-height: var(--p-height);
+  font-weight: 400;
+  margin: var(--spacing-md) 0;
 }
 
 h1 {
@@ -98,4 +113,50 @@ a {
 
 a:hover {
   color: var(--primary-accent);
+}
+
+.subtitle,
+.subtitle2 {
+  color: var(--purple-1);
+  font-family: var(--heading-font);
+  font-weight: 500;
+  font-size: var(--subtitle-size);
+  line-height: var(--subtitle-height);
+}
+.subtitle2 {
+  color: var(--blue-1);
+}
+
+.secondary-text {
+  font-size: var(--secondary-text-size);
+  line-height: var(--secondary-text-height);
+  color: var(--text-grey);
+  letter-spacing: 0.25px;
+}
+
+.primary-button,
+.secondary-button {
+  font-family: var(--body-font);
+  font-size: var(--button-text-size);
+  letter-spacing: 1.25px;
+  font-weight: bold;
+  border-radius: 20px;
+  background-color: var(--primary-accent);
+  border: none;
+  color: var(--text-light);
+  padding: var(--spacing-sm) var(--spacing-md);
+  transition: all 0.25s ease;
+}
+.primary-button:hover {
+  background-color: var(--primary-button-hover);
+  cursor: pointer;
+}
+
+.secondary-button {
+  background-color: transparent;
+  color: var(--primary-accent);
+}
+.secondary-button:hover {
+  opacity: 0.75;
+  cursor: pointer;
 }
