--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
   --spacing-md: 16px;
   --spacing-lg: 32px;
   --spacing-xl: 64px;
+  --standard-width: 1144px;
 }
 
 body {
@@ -48,6 +49,11 @@ body {
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
+  background-color: lightsteelblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
@@ -110,11 +116,43 @@ a {
   font-weight: 500;
   transition: all 0.25s ease;
 }
-
 a:hover {
   color: var(--primary-accent);
 }
 
+/* Layout */
+.section-container {
+  width: 100%;
+  max-width: var(--standard-width);
+}
+
+.two-column {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+.two-column > .col-left {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 var(--spacing-md) 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+.two-column > .col-right {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 0 0 var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+/* Text Styling */
 .subtitle,
 .subtitle2 {
   color: var(--purple-1);
@@ -126,7 +164,6 @@ a:hover {
 .subtitle2 {
   color: var(--blue-1);
 }
-
 .secondary-text {
   font-size: var(--secondary-text-size);
   line-height: var(--secondary-text-height);
@@ -134,6 +171,7 @@ a:hover {
   letter-spacing: 0.25px;
 }
 
+/* Buttons Styling */
 .primary-button,
 .secondary-button {
   font-family: var(--body-font);
@@ -151,7 +189,6 @@ a:hover {
   background-color: var(--primary-button-hover);
   cursor: pointer;
 }
-
 .secondary-button {
   background-color: transparent;
   color: var(--primary-accent);
@@ -160,7 +197,6 @@ a:hover {
   opacity: 0.75;
   cursor: pointer;
 }
-
 .with-icon {
   display: flex;
   justify-content: center;
@@ -171,4 +207,35 @@ a:hover {
 }
 .with-icon:hover > img {
   transform: translateX(4px);
+}
+
+/* Navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: var(--standard-width);
+  padding: 0 var(--spacing-md);
+}
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.menu a {
+  color: var(--text-light);
+  margin: 0 var(--spacing-md);
+  font-weight: bold;
+}
+.menu a:hover {
+  text-decoration: underline;
+}
+
+.navbar-button {
+  background-color: rgba(250, 250, 350, 0.25);
+}
+.navbar-button:hover {
+  background-color: rgba(250, 250, 350, 0.5);
 }
