--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 p {
   font-size: var(--p-size);
   line-height: var(--p-height);
-  font-weight: 400;
+  font-weight: 500;
   margin: var(--spacing-md) 0;
 }
 
@@ -120,6 +120,9 @@ a:hover {
   color: var(--primary-accent);
 }
 
+main {
+  margin: var(--spacing-xl) 0;
+}
 /* Layout */
 .section-container {
   width: 100%;
@@ -238,4 +241,28 @@ a:hover {
 }
 .navbar-button:hover {
   background-color: rgba(250, 250, 350, 0.5);
+}
+
+/* Hero styles */
+.hero p {
+  max-width: 480px;
+}
+
+.hero .hero-phone-container {
+  height: 564px;
+  align-items: flex-end;
+}
+.hero-phone {
+  height: 628px;
+  transform: translate(32px, -32px);
+}
+
+.button-container {
+  display: flex;
+  margin: var(--spacing-md) 0;
+}
+
+.button-container button:nth-of-type(2) {
+  margin: 0 0 0 var(--spacing-md);
+  color: var(--purple-2);
 }
