--- a/style.css
+++ b/style.css
@@ -74,16 +74,15 @@ h1 {
 }
 h2 {
   font-family: var(--heading-font);
-  font-size: var(--h2-size);
-  font-weight: 500;
+  font-size: var(--h3-size);
+  font-weight: 600;
   margin: 0;
   width: 100%;
-  letter-spacing: -0.25px;
 }
 h3 {
   font-family: var(--heading-font);
   font-size: var(--h3-size);
-  font-weight: 500;
+  font-weight: 600;
   margin: 0;
   width: 100%;
 }
@@ -279,4 +278,20 @@ main {
 .partners-grid img {
   height: 60px;
   place-self: center;
+}
+
+/* Unified section */
+.unified-platform-section {
+  padding: var(--spacing-xl) 0;
+}
+.unified-platform-section h2 {
+  width: 50%;
+  margin-bottom: var(--spacing-md);
+}
+.unified-platform-section .primary-button {
+  background-color: var(--purple-1);
+  margin: var(--spacing-md) 0;
+}
+.unified-platform-section .primary-button:hover {
+  background-color: var(--primary-accent);
 }
